--- a/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
@@ -28,13 +28,13 @@
 
 
         <!-- Menu item 4 -->
-        <li class="nav-item"><a class="nav-link" th:href="@{/instructordashboard/viewcourse}">
+        <li class="nav-item"><a class="nav-link" th:href="@{/instructordashboard/courses}">
           <i class="fas fa-fw fa-trophy"></i>
           <span>Courses</span>
         </a></li>
 
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/admin/category}">
+          <a class="nav-link" th:href="@{/instructordashboard}">
             <i class="fas fa-list"></i>
             <span>Categories</span>
           </a>
@@ -42,7 +42,7 @@
 
         <!-- Menu item 5 -->
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/admin/orders}">
+          <a class="nav-link" th:href="@{/instructordashboard}">
             <i class="fas fa-fw fa-credit-card"></i>
             <span>Orders & Payments</span>
           </a>
@@ -50,7 +50,7 @@
 
         <!-- Menu item 6 -->
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/admin/courseMaintenance}">
+          <a class="nav-link" th:href="@{/instructordashboard}">
             <i class="fas fa-fw fa-receipt"></i>
             <span>CourseMaintenance</span>
           </a>
