--- a/src/main/resources/templates/instructorDashboard/indexUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/indexUpdate.html
@@ -1,89 +1,80 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<div th:insert="instructorDashboard/fragments/headerUpdate :: header"></div>
+<th:block th:replace="instructorDashboard/fragments/headerUpdate :: header"></th:block>
 
-<body id="page-top">
+<body>
 
-<!-- Page Wrapper -->
-<div id="wrapper">
+<main>
 
     <!-- Sidebar -->
-    <div th:replace="instructorDashboard/fragments/sidebarUpdate :: sidebar"></div>
+    <th:block th:replace="instructorDashboard/fragments/sidebarUpdate :: sidebar"></th:block>
     <!-- End of Sidebar -->
 
     <!-- Content Wrapper -->
-    <div id="content-wrapper" class="d-flex flex-column">
+    <div class="page-content">
+
+        <!-- Topbar -->
+        <th:block th:replace="instructorDashboard/fragments/topbarUpdate :: topbar"></th:block>
+        <!-- End of Topbar -->
 
         <!-- Main Content -->
-        <div id="content">
-
-            <!-- Topbar -->
-            <div th:replace="instructorDashboard/fragments/topbarUpdate :: topbar"></div>
-            <!-- End of Topbar -->
-
+        <div class="page-content-wrapper border">
             <!-- Begin Page Content -->
             <div th:replace="~{__${fragmentContent}__}"></div>
 
-            <!-- /.container-fluid -->
-
         </div>
+        <!-- /.container-fluid -->
+
         <!-- End of Main Content -->
 
         <!-- Footer -->
-        <div th:insert="instructorDashboard/fragments/footerUpdate :: footer"></div>
+        <th:block th:replace="instructorDashboard/fragments/footerUpdate :: footer"></th:block>
         <!-- End of Footer -->
 
     </div>
     <!-- End of Content Wrapper -->
 
-</div>
+    </div>
+    <!-- End of Page Wrapper -->
 
-<!-- End of Page Wrapper -->
+    <!-- Scroll to Top Button-->
+    <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+    </a>
 
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top">
-    <i class="fas fa-angle-up"></i>
-</a>
+    <!-- Logout Modal-->
+    <div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+         aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
+                    <button class="close" type="button" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">×</span>
+                    </button>
+                </div>
+                <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
+                <div class="modal-footer">
+                    <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
 
-<!-- Logout Modal-->
-<div class="modal fade" id="logoutModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     aria-hidden="true">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
+<!--                    <form th:action="@{/logout}" method="post" style="display: inline;">-->
+                        <button type="submit" class="btn btn-primary">Logout</button>
+<!--                    </form>-->
+                </div>
             </div>
-            <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-            <div class="modal-footer">
-                <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-                <a class="btn btn-primary" href="login.html">Logout</a>
-            </div>
-
         </div>
     </div>
-</div>
+</main>
+<script th:src="@{/assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js}"></script>
 
-<!-- Bootstrap core JavaScript-->
-<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<!-- Vendors -->
+<script th:src="@{/assets/vendor/purecounterjs/dist/purecounter_vanilla.js}"></script>
+<script th:src="@{/assets/vendor/apexcharts/js/apexcharts.min.js}"></script>
+<script th:src="@{/assets/vendor/overlay-scrollbar/js/overlayscrollbars.min.js}"></script>
 
-<!-- Core plugin JavaScript-->
-<script th:src="@{/vendor/jquery-easing/jquery.easing.min.js}"></script>
-
-<!-- Custom scripts for all pages-->
-<script th:src="@{/js/sb-admin-2.min.js}"></script>
-
-<!-- Page level plugins -->
-<script th:src="@{/vendor/chart.js/Chart.min.js}"></script>
-
-<!-- Page level custom scripts -->
-<script th:src="@{/js/demo/chart-area-demo.js}"></script>
-<script th:src="@{/js/demo/chart-pie-demo.js}"></script>
-<!--<script th:src="@{/js/adminDashboard/Category.js}"></script>-->
+<!-- Template Functions -->
+<script th:src="@{/assets/js/functions.js}"></script>
 
 </body>
 
